--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,7 +102,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/demo_cover.webp
+    - assets/arrow-circle-left-solid.svg
     - assets/mono_color_logo.svg
     - assets/device-layer-1.svg
     - assets/device-layer-2.svg
