--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -241,9 +241,11 @@ jobs:
           security list-keychain -d user -s $KEYCHAIN_PATH
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
 
-      - name: TEST
+      - name: Replace System Dylib
         run: |
-          security find-identity -v -p codesigning
+          otool -L player.app/Contents/MacOS/player | grep lmdb
+          install_name_tool -change /opt/homebrew/opt/lmdb/lib/liblmdb.dylib @executable_path/../Frameworks/liblmdb.dylib player.app/Contents/MacOS/player
+        working-directory: build/macos/Build/Products/Release
 
       - name: Code Signing
         run: /usr/bin/codesign --deep --force -s "$DEVELOPER_ID_APPLICATION_SIGNING_IDENTITY" --options runtime player.app -v
