--- a/playback/Cargo.toml
+++ b/playback/Cargo.toml
@@ -16,8 +16,10 @@ rodio = { version = "0.19.0", features = [] }
 rustfft = "6.2.0"
 tokio-util = "0.7.11"
 rand = "0.8.5"
-souvlaki = "0.7.3"
 anyhow = "1.0.89"
 raw-window-handle = "0.5.2"
 windows = {version = "0.44.0", features = ["Win32_System_LibraryLoader", "Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Graphics_Gdi"] }
 once_cell = "1.20.2"
+
+[target.'cfg(not(target_os = "android"))'.dependencies]
+souvlaki = "0.7.3"
