--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace = "com.example.player"
+    namespace = "ci.not.rune"
     compileSdk = flutter.compileSdkVersion
     ndkVersion = flutter.ndkVersion
 
@@ -35,7 +35,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.player"
+        applicationId = "ci.not.rune"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdk = flutter.minSdkVersion
@@ -49,6 +49,69 @@ android {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
+        }
+    }
+
+    // below are the configurations for Rust and libc++_shared.so
+    // in short, we copy the libc++_shared.so from NDK to JniLibs and clean it after assembling
+    afterEvaluate {
+        def ndkDir = android.ndkDirectory
+        def libCppDir = "$ndkDir/sources/cxx-stl/llvm-libc++/libs"
+        def jniLibsDir = "$projectDir/src/main/jniLibs"
+        def abis = ["armeabi-v7a", "arm64-v8a", "x86", "x86_64"]
+
+        // clean JniLibs before and after merge, ensuring that the libc++_shared.so is always up-to-date.
+        task cleanJniLibs {
+            doLast {
+                abis.each { abi ->
+                    def libcSoDest = file("$jniLibsDir/$abi/libc++_shared.so")
+                    if (libcSoDest.exists()) {
+                        println "Deleting $libcSoDest"
+                        libcSoDest.delete() // 构建前清理文件
+                    }
+                }
+            }
+        }
+
+        // copy libc++_shared.so to JniLibs
+        task copyLibcxxShared {
+            doLast {
+                println "Now let's make libhub.so happy ;)"
+                abis.each { abi ->
+                    def libcSoSrc = file("$libCppDir/$abi/libc++_shared.so")
+                    def libcSoDest = file("$jniLibsDir/$abi/libc++_shared.so")
+                    if (libcSoSrc.exists()) {
+                        println "Copying $libcSoSrc to $libcSoDest"
+                        copy {
+                            from libcSoSrc
+                            into "$jniLibsDir/$abi"
+                        }
+                    } else {
+                        throw new Exception("libc++_shared.so for ABI $abi not found in NDK at $libCppDir.")
+                    }
+                }
+            }
+        }
+
+        // when merging JniLibs, first clean then copy
+        tasks.matching { 
+            it.name.startsWith('merge') && it.name.contains('JniLib')
+        }.all { task ->
+            task.dependsOn cleanJniLibs
+            task.dependsOn copyLibcxxShared
+        }
+
+        // after assembling, clean JniLibs
+        tasks.matching { 
+            it.name.startsWith('assemble') || it.name.contains('build')
+        }.all { task ->
+            // avoid using task.finalizedBy(cleanJniLibs) because it will cause circular dependency
+            task.doLast {
+                println "Cleaning JniLibs after $task.name"
+                cleanJniLibs.actions.each {
+                    it.execute(task)
+                }
+            }
         }
     }
 }
