--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -149,12 +149,17 @@ jobs:
         with:
           pattern: Rune-*-linux
           path: artifacts
+
+      - uses: benjlevesque/short-sha@v3.0
+        id: short-sha
+        with:
+          length: 7
           
       - name: Build Zip for Release
         uses: thedoctor0/zip-release@master
         with:
           type: "zip"
-          filename: Rune-${{ github.ref_name }}-${{ jobs.build-linux.steps.short-sha.outputs.sha }}-linux.zip
+          filename: Rune-${{ github.ref_name }}-${{ steps.short-sha.outputs.sha }}-linux.zip
           directory: artifacts
           
       - name: Release
